--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Build Docker image
       uses: docker/build-push-action@v4
       with:
-        context: app
+        context: .
         push: true
         tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
